[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic_schema_exporter"
version = "0.1.0"
description = "A package for exporting Pydantic model schemas to JSON format"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic~=2.10.4",
    "typeguard>=4.0.0",
    "pandas",
    "prefect"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[project.scripts]
export-schema = "pydantic_schema_exporter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydantic_schema_exporter*"]

[tool.setuptools.package-data]
"pydantic_schema_exporter" = ["*.json"] 