[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md_form"
version = "0.1.0"
description = "A package for MDForm field helpers and payload translation utilities"
authors = [
    {name = "Yan-sin Huang", email = "yansin@massdynamics.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic~=2.10.4",
    "typeguard>=4.0.0",
    "pandas",
    "prefect"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["md_form*", "field_utils*"]

[tool.setuptools.package-data]
"md_form.field_utils" = ["*.json"] 